# remy-robotics-tools

./: OWImotorController.md  ProjectHome.md
STJoy/: STJoystick_linux.cpp  manifest.xml
STJoy_node/: CMakeLists.txt  STJoy_node.rosinstall  stack.xml
STJoy_node/src/: joy_node.cpp
STJoystickDriver/: player.cfg
STJoystickDriver/STJoy/: STJoystick.h
controls_web_service/: ballbeam.py  ballplate.py  index.html  index2.html  pendulum.c
desktop_camera/src/: desktop_camera
gamepadAPI/: test-gazebo.html  twistgamepad.js
owimotorcontroller/: CMakeLists.txt  Makefile  readme.txt
owimotorcontroller/Modules/: FindOctave.cmake  FindUSB.cmake
owimotorcontroller/examples/: CMakeLists.txt  Makefile  testarm.py
owimotorcontroller/interfaces/java/: CMakeLists.txt
owimotorcontroller/interfaces/matlab/: CMakeLists.txt  owiswig_m.cc  usbowiarm.m
owimotorcontroller/interfaces/octave/: CMakeLists.txt  owiswig.i
owimotorcontroller/interfaces/python/: CMakeLists.txt
owimotorcontroller/src/: CMakeLists.txt  owimotorcontroller.cc  owimotorcontroller.h  owimotorcontroller.hpp  usbwrap.h  usbwrap_ddk.cc  usbwrap_iokit.cc  usbwrap_libusb.cc
playerXGetImagePluginDriver/: Makefile  player.cfg
playerXGetImagePluginDriver/src/: XGetImageDriver.cc  XGetImageDriver.h
playerXKeyboardNavDriver/: Makefile  player.cfg  testprogram.cc
playerXKeyboardNavDriver/src/: XKeyboardNavDriver.cc  XKeyboardNavDriver.h
ros_gazebo/: cpsc3600.launch  cpsc3600.world  install.sh  testgazebo.patch
ros_morse/: install.sh
screen2im/: demoreel.html  manifest.xml  readme  screen2im.c  screen2im.py  stack.xml
trunk/: index.html  simpleapirobot.h
trunk/STJoy/: STJoystick.cpp  STJoystick_darwin.cpp  STJoystick_win32.cpp
trunk/STJoy_node/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/STJoy_node/src/: joy_node.cpp
trunk/STJoystickDriver/: Makefile
trunk/controls_web_service/: ballbeam.py  ballplate.py  index.html  index2.html  installplate.sh  remoteevaluate.py
trunk/controls_web_service/static/: ballbeam.html
trunk/desktop_camera/: desktop_camera.rosinstall  manifest.xml  stack.xml
trunk/desktop_camera/src/: desktop_camera
trunk/gamepadAPI/: test-gazebo.html  twistgamepad.js
trunk/owimotorcontroller/: CMakeLists.txt  Makefile  readme.txt
trunk/owimotorcontroller/Modules/: FindMatlab-rwp.cmake  FindUSB.cmake  SetupDirectories.cmake
trunk/owimotorcontroller/examples/: CMakeLists.txt  Makefile  testarm.cc  testarm.java  testarm.m
trunk/owimotorcontroller/interfaces/: CMakeLists.txt
trunk/owimotorcontroller/interfaces/java/: CMakeLists.txt
trunk/owimotorcontroller/interfaces/matlab/: CMakeLists.txt  class_handle.h  owiswig_m.cc
trunk/owimotorcontroller/interfaces/octave/: CMakeLists.txt
trunk/owimotorcontroller/interfaces/python/: CMakeLists.txt
trunk/owimotorcontroller/src/: CMakeLists.txt  libowimotorcontroller.pc.in  owimotorcontroller.cc  owimotorcontroller.h  usbwrap.h  usbwrap_ddk.cc  usbwrap_iokit.cc
trunk/playerSTJoystickDriver/STJoy/: Makefile
trunk/playerSTJoystickDriver/src/: stjoystick.cc
trunk/playerXGetImagePluginDriver/: Makefile  XGetImageDriver.cc  player.cfg
trunk/playerXGetImagePluginDriver/src/: XGetImageDriver.cc  XGetImageDriver.h
trunk/playerXKeyboardNavDriver/: Makefile  player.cfg
trunk/playerXKeyboardNavDriver/src/: XKeyboardNavDriver.cc  XKeyboardNavDriver.h
trunk/robbie/: robbie.py
trunk/ros_gazebo/: complete_stage_patch.patch  install.sh  stage.launch  testgazebo.patch  willow-erratic.world
trunk/ros_morse/: install.sh  ros_quadrotor.py
trunk/screen2im/: CMakeLists.txt  Makefile  __init__.py  readme  screen2im.c  screen2im.py
wiki/: OWImotorController.wiki
