# This is a CMake example for Java

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(JNI REQUIRED) 
IF(JAVA_INCLUDE_PATH)
    INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})
    INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH2})

    IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	FIND_LIBRARY(CARBON_LIBRARY Carbon)
	FIND_LIBRARY(IOKIT_LIBRARY IOKit)
	MARK_AS_ADVANCED (CARBON_LIBRARY IOKIT_LIBRARY)
	SET(EXTRA_LIBS ${CARBON_LIBRARY} ${IOKIT_LIBRARY})
	SET(EXTRA_SRC ${CMAKE_SOURCE_DIR}/src/usbwrap_iokit.cc)
    ELSE (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	find_package(USB REQUIRED)
	include_directories(${USB_INCLUDE_DIRS})
	SET(EXTRA_LIBS ${USB_LIBRARIES})
	SET(EXTRA_SRC  ${CMAKE_SOURCE_DIR}/src/usbwrap_libusb.cc)
    ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src )

    SET(CMAKE_SWIG_FLAGS "")

    SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES CPLUSPLUS ON)
    #SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES SWIG_FLAGS "-includeall")
    SWIG_ADD_MODULE(owiswig_j java owiswig.i ${CMAKE_SOURCE_DIR}/src/owimotorcontroller.cc ${EXTRA_SRC})
    SWIG_LINK_LIBRARIES(owiswig_j ${JAVA_LIBRARIES} ${EXTRA_LIBSw})

    set(OWISWIG_CLASSES "${CMAKE_CURRENT_BINARY_DIR}/javaclasses")
    add_custom_command(
        OUTPUT ${OWISWIG_CLASSES}
        COMMAND ${JAVA_COMPILE}
        ARGS "*.java"
    )

    set(OWISWIG_JAR "${CMAKE_CURRENT_BINARY_DIR}/owiswig.jar")
    add_custom_command(
        OUTPUT ${OWISWIG_JAR}
        COMMAND ${JAVA_ARCHIVE} 
        ARGS cvf ${OWISWIG_JAR} "*.class"
    )

    add_custom_target(owiswig_jarfile ALL DEPENDS  ${OWISWIG_CLASSES} ${OWISWIG_JAR})
else(JAVA_INCLUDE_PATH)
    message(STATUS "Java installation not found")
ENDIF(JAVA_INCLUDE_PATH)
