include_directories (${CMAKE_SOURCE_DIR}/src)

FIND_PACKAGE(Matlab-rwp)
INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})
include_directories(${USB_INCLUDE_DIRS})
IF(MATLAB_INCLUDE_DIR)
	if( DARWIN OR APPLE )
		set(MEXEXT "mexmac")
	elseif( UNIX )
		if( IS_X86_64 )
			set(MEXEXT "mexa64")
		else()
			set(MEXEXT "mexglx")
		endif()
	elseif( WIN64 )
		set(MEXEXT "mexw64")
	elseif( WIN32 OR CYGWIN OR WINDOWS )
		set(MEXEXT "mexw32")
	else()
		set(MEXEXT "mex")
	endif()
      IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	FIND_LIBRARY(CARBON_LIBRARY Carbon)
	FIND_LIBRARY(IOKIT_LIBRARY IOKit)
	MARK_AS_ADVANCED (CARBON_LIBRARY IOKIT_LIBRARY)
	SET(EXTRA_LIBS ${CARBON_LIBRARY} ${IOKIT_LIBRARY})
	SET(EXTRA_SRC ${CMAKE_SOURCE_DIR}/src/usbwrap_iokit.cc)
      ELSE (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	find_package(USB REQUIRED)
	include_directories(${USB_INCLUDE_DIRS})
	SET(EXTRA_LIBS ${USB_LIBRARIES})
	SET(EXTRA_SRC  ${CMAKE_SOURCE_DIR}/src/usbwrap_libusb.cc)
      ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

      SET(src "${CMAKE_SOURCE_DIR}/interfaces/matlab/usbowiarm.m")
      SET(tgt "${CMAKE_BINARY_DIR}/interfaces/matlab/usbowiarm.m")
      execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${src} ${tgt})

	ADD_LIBRARY(owiswig_m MODULE owiswig_m.cc ${EXTRA_LIBS})
	TARGET_LINK_LIBRARIES(owiswig_m ${MATLAB_LIBRARIES} ${EXTRA_LIBS} owimotorcontroller)
	set_target_properties(owiswig_m PROPERTIES
		PREFIX ""
		SUFFIX  ".${MEXEXT}"
	)
ELSE(MATLAB_INCLUDE_DIR)
    message(STATUS "MATLAB installation not found")
ENDIF(MATLAB_INCLUDE_DIR)

