# This is a CMake example for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(Octave)
IF(OCTAVE_FOUND)
    INCLUDE_DIRECTORIES(${OCTAVE_INCLUDE_DIRS})

    find_package(USB REQUIRED)
    INCLUDE_DIRECTORIES(${USB_INCLUDE_DIRS})

    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src )

    SET(CMAKE_SWIG_FLAGS "")

    SET(SWIG_CXX_EXTENSION "cc")
    SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES CPLUSPLUS ON)
    #SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES SWIG_FLAGS "-includeall")

    SWIG_ADD_MODULE(owiswig_o octave owiswig.i ${CMAKE_SOURCE_DIR}/src/owimotorcontroller.cc)
    SWIG_LINK_LIBRARIES(owiswig_o ${OCTAVE_LIBRARIES} ${USB_LIBRARIES})

    set(OCTAVE_OWISWIG_MEX ${CMAKE_CURRENT_BINARY_DIR}/owiswig.oct)
    GET_TARGET_PROPERTY(LIB_NAME owiswig_o LOCATION)
    add_custom_command(
      TARGET owiswig_o
      POST_BUILD
      COMMAND ${CMAKE_COMMAND} -E copy ${LIB_NAME} ${OCTAVE_OWISWIG_MEX}
    )
else(OCTAVE_FOUND)
    message(STATUS "Octave installation not found")
ENDIF(OCTAVE_FOUND)
