# This is a CMake example for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(Octave)
IF(OCTAVE_FOUND)
    INCLUDE_DIRECTORIES(${OCTAVE_INCLUDE_DIRS})

    IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	FIND_LIBRARY(CARBON_LIBRARY Carbon)
	FIND_LIBRARY(IOKIT_LIBRARY IOKit)
	MARK_AS_ADVANCED (CARBON_LIBRARY IOKIT_LIBRARY)
	SET(EXTRA_LIBS ${CARBON_LIBRARY} ${IOKIT_LIBRARY})
	SET(EXTRA_SRC ${CMAKE_SOURCE_DIR}/src/usbwrap_iokit.cc)
    ELSE (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	find_package(USB REQUIRED)
	include_directories(${USB_INCLUDE_DIRS})
	SET(EXTRA_LIBS ${USB_LIBRARIES})
	SET(EXTRA_SRC  ${CMAKE_SOURCE_DIR}/src/usbwrap_libusb.cc)
    ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")


    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src )

    SET(CMAKE_SWIG_FLAGS "")

    SET(SWIG_CXX_EXTENSION "cc")
    SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES CPLUSPLUS ON)
    #SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES SWIG_FLAGS "-includeall")

    SWIG_ADD_MODULE(owiswig_o octave owiswig.i ${CMAKE_SOURCE_DIR}/src/owimotorcontroller.cc ${EXTRA_SRC})
    SWIG_LINK_LIBRARIES(owiswig_o ${OCTAVE_LIBRARIES} ${EXTRA_LIBS})

    set(OCTAVE_OWISWIG_MEX ${CMAKE_CURRENT_BINARY_DIR}/owiswig.oct)
    GET_TARGET_PROPERTY(LIB_NAME owiswig_o LOCATION)
    add_custom_command(
      TARGET owiswig_o
      POST_BUILD
      COMMAND ${CMAKE_COMMAND} -E copy ${LIB_NAME} ${OCTAVE_OWISWIG_MEX}
    )
else(OCTAVE_FOUND)
    message(STATUS "Octave installation not found")
ENDIF(OCTAVE_FOUND)
