# This is a CMake example for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

find_package(USB REQUIRED)
INCLUDE_DIRECTORIES(${USB_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src )

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(owiswig.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(owiswig python owiswig.i ${CMAKE_SOURCE_DIR}/src/owimotorcontroller.cc)
SWIG_LINK_LIBRARIES(owiswig ${PYTHON_LIBRARIES} ${USB_LIBRARIES})
